@@ -1,3 +1,12 @@
+2012-12-20  Adam Klein  <adamk@chromium.org>
+
+        Properly process <template> end tags when in TemplateContentsMode
+        https://bugs.webkit.org/show_bug.cgi?id=105556
+
+        Reviewed by Eric Seidel.
+
+        * html5lib/resources/template.dat:
+
 2012-12-20  Emil A Eklund  <eae@chromium.org>
 
         [flexbox] Fix handling of very large flex grow/shrink values
